tests/baselines/reference/declFileForTypeParameters.errors.txt
declFileForTypeParameters.ts(2,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== declFileForTypeParameters.ts (1 errors) ====
    class C<T> {
        x: T;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        foo(a: T): T {
            return this.x;
        }
    }